<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--Name of the app-->
    <string name="app_name">Running Quiz</string>

    <!--Label of the Quiz-->
    <string name="label_quiz">Questions</string>

    <!--Label of the Results-->
    <string name="label_result">Result</string>

    <!--Content description for the runners img-->
    <string name="welcome_img">runners image</string>

    <!--Welcome message text-->
    <string name="welcome_msg">Are you interested in running? \nLet\'s see if you can answer a couple of question about it! \nGood luck!</string>

    <!--Start quiz button label-->
    <string name="start_quiz">Start quiz</string>

    <!--question 1 label-->
    <string name="question_label_1">Question 1</string>

    <!--question 2 label-->
    <string name="question_label_2">Question 2</string>

    <!--question 3 label-->
    <string name="question_label_3">Question 3</string>

    <!--question 4 label-->
    <string name="question_label_4">Question 4</string>

    <!--question 5 label-->
    <string name="question_label_5">Question 5</string>

    <!--1st question text -->
    <string name="question_1">What is the distance of a full Marathon?</string>

    <!--2nd question text -->
    <string name="question_2">How long should you hold a static stretch?</string>

    <!--3rd question text -->
    <string name="question_3">Which of the following is not a good rule for runners to practice?</string>

    <!--4th question text -->
    <string name="question_4">What should one bring to a long distance race?</string>

    <!--5th question text -->
    <string name="question_5">What is the surname of one of the most popular runner in the word, whose first name is Usain?</string>

    <!--6th question text -->
    <string name="question_6">What is the surname of one of the most popular runner in the word, whose first name is Usain?</string>

    <!--Answer A for the 1st question -->
    <string name="answer_1_a">30 km</string>

    <!--Answer B for the 1st question -->
    <string name="answer_1_b">13.1 miles</string>

    <!--Answer C for the 1st question -->
    <string name="answer_1_c">42.195 km</string>

    <!--Answer D for the 1st question -->
    <string name="answer_1_d">50 km</string>

    <!--Answer A for the 2nd question -->
    <string name="answer_2_a">About 60 seconds</string>

    <!--Answer B for the 2nd question -->
    <string name="answer_2_b">15 to 30 seconds</string>

    <!--Answer C for the 2nd question -->
    <string name="answer_2_c">90 to 120 seconds</string>

    <!--Answer D for the 2nd question -->
    <string name="answer_2_d">At least 120 seconds</string>

    <!--Answer A for the 3rd question -->
    <string name="answer_3_a">Never run against the traffic.</string>

    <!--Answer B for the 3rd question -->
    <string name="answer_3_b">Do not wear a head set.</string>

    <!--Answer C for the 3rd question -->
    <string name="answer_3_c">Make yourself visiible when running at night.</string>

    <!--Answer D for the 3rd question -->
    <string name="answer_3_d">"Run in a unpopulated area. "</string>

    <!--Answer A for the 4th question -->
    <string name="answer_4_a">Gel</string>

    <!--Answer B for the 4th question -->
    <string name="answer_4_b">Hidration</string>

    <!--Answer C for the 4th question -->
    <string name="answer_4_c">BCAA tablets</string>

    <!--Answer D for the 4th question -->
    <string name="answer_4_d">Roller skates</string>

    <!--Hint for Answer for the 5th question -->
    <string name="answer_5_hint">name</string>

    <!--Answer A for the 5th question -->
    <string name="answer_5_a">Bolt</string>

    <!--Lable of the SUBMIT button -->
    <string name="submit">Submit</string>

    <!--Results in a toast message text -->
    <string name="toast_message">Out of 5 questions you answered <xliff:g example="3" id="points">%d</xliff:g> correctly</string>

    <!--Lable of the Your result label button -->
    <string name="your_result_label">Your result is</string>

    <!--Percent sign -->
    <string name="percent" translatable="false">%</string>

    <!-- 100% the initial value of the result label -->
    <string name="initialPercent">100%</string>

    <!-- Error message for not answering each questions -->
    <string name="toast_message_fill_error">You haven\'t answered every question!</string>

    <!--Lable of the Send button -->
    <string name="send">Send result</string>

    <!--Hint of the name field -->
    <string name="user">Your name</string>

    <!-- Text of the subject of the e-mail -->
    <string name="email_subject"><xliff:g example="Viki" id="userName">%s</xliff:g>\'s Running Quiz result</string>

    <!-- Text of the subject of the e-mail -->
    <string name="email_body_1">Dear <xliff:g example="Viki" id="userName">%s</xliff:g>,</string>

    <!--Message part 1-->
    <string name="email_body_2">"Your result on the Running Quiz is "</string>

    <!--Message part 2-->
    <string name="email_body_3">" AND "</string>

    <!--Message part 3-->
    <string name="email_body_4">Thank you for filling in our quiz!</string>

    <!--Message part 4-->
    <string name="email_body_6">The Running Quiz team</string>

    <!--Message part 5-->
    <string name="email_body_7">Here are the correct answers for you:</string>

    <!--Error message for not entering a user name-->
    <string name="toast_message_username_error">Please type your name!</string>

</resources>

