<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchPar"
    tools:context=".MainActivity">

    <LinearLayout style="@style/mainLayout">

        <ImageView
            style="@style/runnersImg"
            android:contentDescription="@string/welcome_img"
            android:padding="@dimen/space0" />

        <TextView
            style="@style/resultLabel"
            android:padding="@dimen/space0"
            android:text="@string/your_result_label" />

        <TextView
            android:id="@+id/result_percentage"
            style="@style/resultPercent"
            android:layout_weight="1"
            android:text="@string/initialPercent" />

        <Button
            style="@style/startButton"
            android:onClick="sendResult"
            android:text="@string/send" />

    </LinearLayout>

</ScrollView>