<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.android.runningquiz.Quiz">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/running"
        android:scaleType="fitCenter"
        android:paddingBottom="24dp"/>

    <!-- Question 1 START -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_label"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingRight="8dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:paddingBottom="16dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_a"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_b"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_c"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_d"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"/>

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp">
    </View>

    <!-- Question 1 END -->

    <!-- Question 1 START -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_label"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingRight="8dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textAllCaps="true"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_2"
        android:paddingBottom="16dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_a"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_b"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_c"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2_d"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"/>

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp">
    </View>


    <!-- Question 1 END -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submitAnswers"
        />

</LinearLayout>

</ScrollView>
